--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,600;1,700&display=swap');
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css);
 *
 
 {
@@ -65,11 +66,11 @@ header{
 }
 
 .menu_item:hover{
-    text-shadow: 0px 0.7px 1px;
+    text-shadow: 0px 2px 5px;
 }
 
 .page1{
-    padding: 198px 70px;
+    padding: 200px 70px;
     max-height: 100vh;
 }
 
