--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,6 +77,15 @@ header{
     margin-top: 20px;
 }
 
+.loginico{
+    max-width: 30px;
+}
+
+.functionlinks{
+    display: flex;
+    align-items: center;
+}
+
 .icon-btn {
     vertical-align: middle;
     background: transparent;
