--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -200,6 +200,7 @@ header{
     display: inline-block;
     margin-bottom: 20px;
     font-size: 2em;
+    font-weight: 500;
 }
 
 .shoeSlider img{
@@ -224,4 +225,19 @@ header{
     color: white;
     text-decoration: none;
     padding: 10px 15px;
+}
+
+.reviews{
+    max-width: 100%;
+}
+
+.TopHeader{
+    justify-content: center;
+    text-align: center;
+    padding: 20px 0 0 0;
+    margin-top: 7px;
+}
+
+.reviews hr{
+    align-items: center;
 }
